--- a/styles/story.css
+++ b/styles/story.css
@@ -78,7 +78,7 @@
         width: 55vw;
     }
     .intro-paragraph {
-        font-size: 3vw;
+        font-size: clamp(14px, 3vw, 22px);
     }
 }
 
@@ -94,14 +94,14 @@
         text-align: left;
     }
     #intro-links a {
-        font-size: 4vw;
+        font-size: clamp(15px, 4vw, 20px);
     }
     #intro-text {
         width: 90vw;
         right: 5vw;
     }
     .intro-paragraph {
-        font-size: 5vw;
-        line-height: 1.3;
+        font-size: clamp(16px, 5vw, 22px);
+        line-height: 1.4;
     }
 }
